<resources>
    <string name="app_name">Miner</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>
    <string name="debug">Debug</string>
    <string name="game_score">Score</string>
    <string name="radar">Radar</string>
    <string name="confirm_record">Confirm Record</string>
    <string name="player">Player</string>
    <string name="play">Go Play!</string>
    <string name="lost_info">Game Lost!</string>
    <string name="win_info">Game Win!</string>
    <string name="radar_disable">Radar is disable!</string>
</resources>
