<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40"
        android:gravity="center"
        android:alpha="0.9"
        android:textColor="@color/colorPrimary"
        android:text="@string/player"
        android:textSize="40dp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40"
        android:gravity="center"
        android:alpha="0.9"
        android:textColor="@color/colorPrimary"
        android:text="@string/game_score"
        android:textSize="60dp"/>

    <Button
        android:id="@+id/confirm_record"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:alpha="0.6"
        android:text="@string/confirm_record"/>

</LinearLayout>